# minecraft-cpp

./: CMakeLists.txt  corun  readme.md  run
assets/.programcache/: profile  servers
include/: data.hpp  renderer.hpp  shaders.hpp  sockets.hpp  stringType.hpp  voxelInfo.hpp  voxels.hpp
libs/: data.cpp  renderer.cpp  shaders.cpp  sockets.cpp  stringType.cpp  voxelInfo.cpp  voxels.cpp
src/: main.cpp
